linked the js script to html file

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
                 >open-sourced on GitHub</a
             >
         </footer>
+        <script src="src/index.js"></script>
     </body>
 </html>
