--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
             This project was coded by
             <a href="https://github.com/Stace113/" target="_blank"
                 >Stace Watkins</a
-            >, and is
+            >. It is
             <a href="https://github.com/Stace113/world-clock" target="_blank"
                 >open-sourced on GitHub</a
+            >, and is
+            <a href="https://world-clock-sw.netlify.app/" target="_blank"
+                >hosted on Netlify</a
             >
         </footer>
         <script src="src/index.js"></script>
