added basic html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
         <title>World Clock - Stace Watkins</title>
     </head>
     <body>
-        <h1>World Clock</h1>
+        <div class="container">
+            <h1>World Clock</h1>
+
+            <select>
+                <option value="Select a City..."></option>
+                <option value="London"></option>
+                <option value="New York"></option>
+                <option value="Sydney"></option>
+                <option value="Madrid"></option>
+                <option value="Rome"></option>
+            </select>
+
+            <div class="city">
+                <h2>Bristol</h2>
+                <div class="date">July 29th 2024</div>
+                <div class="time">10:41:15 AM</div>
+            </div>
+            <div class="city">
+                <h2>Amsterdam</h2>
+                <div class="date">July 29th 2024</div>
+                <div class="time">10:41:15 AM</div>
+            </div>
+        </div>
         <footer>
             This project was coded by
             <a href="https://github.com/Stace113/" target="_blank"
