styled with background and colours

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
             <h1>World Clock</h1>
 
             <select>
-                <option value="Select a City..."></option>
-                <option value="London"></option>
-                <option value="New York"></option>
-                <option value="Sydney"></option>
-                <option value="Madrid"></option>
-                <option value="Rome"></option>
+                <option value="Select a City...">Select a City...</option>
+                <option value="London">London</option>
+                <option value="New York">New York</option>
+                <option value="Sydney">Syndey</option>
+                <option value="Madrid">Madrid</option>
+                <option value="Rome">Rome</option>
             </select>
 
             <div class="city">
