added styling to city

--- a/index.html
+++ b/index.html
@@ -20,14 +20,11 @@
             </select>
 
             <div class="city">
-                <h2>Bristol</h2>
-                <div class="date">July 29th 2024</div>
-                <div class="time">10:41:15 AM</div>
-            </div>
-            <div class="city">
-                <h2>Amsterdam</h2>
-                <div class="date">July 29th 2024</div>
-                <div class="time">10:41:15 AM</div>
+                <div>
+                    <h2>Bristol</h2>
+                    <div class="date">July 29th 2024</div>
+                </div>
+                <div class="time">10:41:15 <small>AM</small></div>
             </div>
         </div>
         <footer>
