--- a/index.html
+++ b/index.html
@@ -26,11 +26,20 @@
                 </div>
                 <div class="time">10:41:15 <small>AM</small></div>
             </div>
+            <div class="city">
+                <div>
+                    <h2>Amsterdam</h2>
+                    <div class="date">July 29th 2024</div>
+                </div>
+                <div class="time">10:41:15 <small>AM</small></div>
+            </div>
         </div>
         <footer>
             This project was coded by
-            <a href="https://github.com/Stace113/" target="_blank"
-                >Stace Watkins</a
+            <strong
+                ><a href="https://github.com/Stace113/" target="_blank"
+                    >Stace Watkins</a
+                ></strong
             >. It is
             <a href="https://github.com/Stace113/world-clock" target="_blank"
                 >open-sourced on GitHub</a
