--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="src/style.css" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
         <title>World Clock - Stace Watkins</title>
     </head>
     <body>
@@ -19,14 +20,14 @@
                 <option value="Rome">Rome</option>
             </select>
 
-            <div class="city">
+            <div class="city" id="bristol">
                 <div>
                     <h2>Bristol</h2>
                     <div class="date">July 29th 2024</div>
                 </div>
                 <div class="time">10:41:15 <small>AM</small></div>
             </div>
-            <div class="city">
+            <div class="city" id="amsterdam">
                 <div>
                     <h2>Amsterdam</h2>
                     <div class="date">July 29th 2024</div>
