--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="src/style.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
         <title>World Clock - Stace Watkins</title>
     </head>
     <body>
@@ -23,16 +24,30 @@
             <div class="city" id="bristol">
                 <div>
                     <h2>Bristol</h2>
-                    <div class="date">July 29th 2024</div>
+                    <div class="date"></div>
                 </div>
-                <div class="time">10:41:15 <small>AM</small></div>
+                <div class="time"></div>
             </div>
             <div class="city" id="amsterdam">
                 <div>
                     <h2>Amsterdam</h2>
-                    <div class="date">July 29th 2024</div>
+                    <div class="date"></div>
                 </div>
-                <div class="time">10:41:15 <small>AM</small></div>
+                <div class="time"></div>
+            </div>
+            <div class="city" id="zürich">
+                <div>
+                    <h2>Zürich</h2>
+                    <div class="date"></div>
+                </div>
+                <div class="time"></div>
+            </div>
+            <div class="city" id="bangkok">
+                <div>
+                    <h2>Bangkok</h2>
+                    <div class="date"></div>
+                </div>
+                <div class="time"></div>
             </div>
         </div>
         <footer>
