--- a/index.html
+++ b/index.html
@@ -12,42 +12,44 @@
         <div class="container">
             <h1>World Clock</h1>
 
-            <select>
+            <select id="city">
                 <option value="Select a City...">Select a City...</option>
-                <option value="London">London</option>
-                <option value="New York">New York</option>
-                <option value="Sydney">Syndey</option>
-                <option value="Madrid">Madrid</option>
-                <option value="Rome">Rome</option>
+                <option value="Europe/London">London</option>
+                <option value="America/New_York">New York</option>
+                <option value="Australia/Sydney">Syndey</option>
+                <option value="Europe/Madrid">Madrid</option>
+                <option value="Europe/Rome">Rome</option>
             </select>
 
-            <div class="city" id="bristol">
-                <div>
-                    <h2>Bristol</h2>
-                    <div class="date"></div>
+            <div id="cities">
+                <div class="city" id="bristol">
+                    <div>
+                        <h2>Bristol</h2>
+                        <div class="date"></div>
+                    </div>
+                    <div class="time"></div>
                 </div>
-                <div class="time"></div>
-            </div>
-            <div class="city" id="amsterdam">
-                <div>
-                    <h2>Amsterdam</h2>
-                    <div class="date"></div>
+                <div class="city" id="amsterdam">
+                    <div>
+                        <h2>Amsterdam</h2>
+                        <div class="date"></div>
+                    </div>
+                    <div class="time"></div>
                 </div>
-                <div class="time"></div>
-            </div>
-            <div class="city" id="zürich">
-                <div>
-                    <h2>Zürich</h2>
-                    <div class="date"></div>
+                <div class="city" id="zürich">
+                    <div>
+                        <h2>Zürich</h2>
+                        <div class="date"></div>
+                    </div>
+                    <div class="time"></div>
                 </div>
-                <div class="time"></div>
-            </div>
-            <div class="city" id="bangkok">
-                <div>
-                    <h2>Bangkok</h2>
-                    <div class="date"></div>
+                <div class="city" id="bangkok">
+                    <div>
+                        <h2>Bangkok</h2>
+                        <div class="date"></div>
+                    </div>
+                    <div class="time"></div>
                 </div>
-                <div class="time"></div>
             </div>
         </div>
         <footer>
