--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
             <select id="city">
                 <option value="Select a City...">Select a City...</option>
+                <option value="current">My current location</option>
                 <option value="Europe/London">London</option>
                 <option value="America/New_York">New York</option>
                 <option value="Australia/Sydney">Syndey</option>
