--- a/index.html
+++ b/index.html
@@ -59,12 +59,16 @@
                 ><a href="https://github.com/Stace113/" target="_blank"
                     >Stace Watkins</a
                 ></strong
-            >. It is
-            <a href="https://github.com/Stace113/world-clock" target="_blank"
-                >open-sourced on GitHub</a
-            >, and is
-            <a href="https://world-clock-sw.netlify.app/" target="_blank"
-                >hosted on Netlify</a
+            >. It is<strong>
+                <a
+                    href="https://github.com/Stace113/world-clock"
+                    target="_blank"
+                    >open-sourced on GitHub</a
+                ></strong
+            >, and is<strong>
+                <a href="https://world-clock-sw.netlify.app/" target="_blank"
+                    >hosted on Netlify</a
+                ></strong
             >
         </footer>
         <script src="src/index.js"></script>
